--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
+    background-color: #F2F2F2;
 }
-
 :root {
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
@@ -12,7 +12,9 @@
 .fa-solid {
     color: var(--main-color);
 }
-
+a {
+    text-decoration: none;
+}
 body {
     display: flex;
     justify-content: center;
@@ -27,7 +29,7 @@ body {
 
 .section-title {
     margin: 0;
-    font-size: 22px;
+    font-size: 1.5em;
 }
 
 .card {
@@ -42,7 +44,7 @@ body {
 }
 
 .card-title {
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .euro {
@@ -51,6 +53,26 @@ body {
 
 .neutralStar {
     color: var(--main-bg-color)
+}
+
+/*****Header*****/
+
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+header a {
+    padding: 10px 10px 0 10px;
+    color: black;
+}
+header nav a:hover {
+    border-top: 2px #0065FC solid;
+    color: #0065FC;
+}
+#logo {
+    width: 80px;
+    height: 25px;
 }
 
 /****** Hebergements And Populaires ***********/
@@ -68,21 +90,22 @@ body {
 
 /****** Hebergements ***********/
 .hebergements {
-    width: 65%;
+    width: 100%;
 }
 .column-hebergement {
     display: flex;
     justify-content: space-between;
 }
-.cartes-hebergement img {
-    width: 10em;
+.cartes-hebergement-content1 img {
+    width: 100%;
     height: 136px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
 }
-
+.hebergement-title {
+    display: flex;
+    align-items: center;
+}
 
 /****** Populaires ***********/
 .populaires {
@@ -150,6 +173,7 @@ body {
 footer {
     display: flex;
     justify-content: space-between;
+    text-align: left;
 }
 
 
