--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,9 @@ input[type=text] {
     padding: 13px;
     border-radius: 0 10px 10px 0;
 }
+.bouton-rechercher:hover {
+    opacity: 0.8;
+}
 .fa-magnifying-glass {
     color: white;
     background-color: #0065FC;
@@ -128,7 +131,7 @@ input[type=text] {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: 2px #DEEBFF solid;
+    border: 2px #d9d9d9 solid;
     border-radius: 40px;
     margin: 10px;
     padding: 0 10px 0 10px;
@@ -147,9 +150,23 @@ input[type=text] {
     display: flex;
     flex-direction: row;
 }
+
 .bouton-filtres:hover {
     background-color: #DEEBFF;
 }
+.bouton-filtres:hover .fa-money-bill-wave {
+    background-color: #DEEBFF;
+}
+.bouton-filtres:hover .fa-heart {
+    background-color: #DEEBFF;
+}
+.bouton-filtres:hover .fa-person {
+    background-color: #DEEBFF;
+}
+.bouton-filtres:hover .fa-fire {
+    background-color: #DEEBFF;
+}
+
 .note-info {
     display: flex;
     flex-direction: row;
@@ -186,15 +203,26 @@ input[type=text] {
 }
 .cartes-hebergement-content1 img {
     width: 100%;
-    height: 136px;
+    height: 150px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    object-fit: cover;
 }
 .hebergement-title {
     display: flex;
     align-items: center;
 }
-
+.cartes-hebergement {
+    width: 33%;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    padding: 5px;
+    background-color: white;
+    margin: 10px 10px 10px 10px;
+}
+.cartes-hebergement:hover {
+    box-shadow: 0 16px 16px 0 rgba(0, 0, 0, 0.2);
+}
 
 
 
