petite modif footer

--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ input[type=text] {
 
 /****** Hebergements ***********/
 .hebergements {
-    width: 75%;
+    width: 70%;
     display: flex;
     flex-direction: column;
 }
@@ -247,7 +247,7 @@ input[type=text] {
 
 /****** Populaires ***********/
 .populaires {
-    width: 32%;
+    width: 30%;
 }
 
 .populaires-title {
@@ -327,7 +327,7 @@ input[type=text] {
     opacity: 0.8;
 }
 .cartes-activite img {
-    width: 280px;
+    width: 285px;
     height: 350px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -339,7 +339,9 @@ input[type=text] {
 .activite-title {
     margin: 10px 0 20px 10px;
 }
-
+.onglet-activite {
+    padding: 30px;
+}
 
 
 /*****Footer*****/
@@ -347,6 +349,7 @@ input[type=text] {
 footer {
     display: flex;
     justify-content: space-between;
+    padding: 30px;
 }
 footer a {
     padding: 5px 20px 5px 0;
@@ -355,7 +358,8 @@ footer a {
 .footer-content {
     display: flex;
     flex-direction: column;
-    padding-right: 200px;
+    padding-left: 30px;
+    width: 33%;
 }
 footer a:hover {
     color: #0065FC;
