--- a/css/style.css
+++ b/css/style.css
@@ -570,6 +570,7 @@ footer a:hover {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 0;
     }
     #logo {
         padding: 10px;
@@ -579,7 +580,7 @@ footer a:hover {
         display: flex;
     }
     nav a {
-        padding: 10px 50px 10px 50px;
+        padding: 10px 50px 15px 50px;
     }
     header nav a:hover {
         border-top: none;
@@ -592,6 +593,9 @@ footer a:hover {
 
     .presentation-recherche {
         margin: 20px;
+    }
+    .headline h2 {
+        margin-top: 0;
     }
     .logo-loupe {
         display: flex;
@@ -702,13 +706,16 @@ footer a:hover {
         box-sizing: border-box;
         margin: 15px 0 15px 0;
     }
+    .cartes-hebergement img {
+        height: 120px;
+    }
 
 
     /* Activité */
 
     .onglet-activite {
         margin: 20px;
-        padding: 0;
+        padding: 0 10px 0 10px;
     }
     .activite-title {
         margin: 20px 0 20px 0;
@@ -735,7 +742,7 @@ footer a:hover {
         display: flex;
         flex-direction: column;
         margin: 0;
-        padding: 20px;
+        padding: 0 30px 0 30px;
     }
     .footer-content {
         width: 100%;
