essai de mise en page avec flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,8 @@ header nav a:hover {
 input[type=text] {
     border: 1px solid var(--main-bg-color);
     border-right: none;
+     /* retirer ou non l'outline de la barre de recherche */
+    /* outline: none; */
     text-align: center;
     font-weight: bold;
     font-size: 15px;
@@ -207,6 +209,9 @@ input[type=text] {
 }
 .column-hebergement {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
     background-color: var(--main-bg-color);
     margin: 5px;
 }
@@ -222,12 +227,14 @@ input[type=text] {
     background-color: blue;
 }
 .cartes-hebergement {
-    width: 33%;
+    box-sizing: border-box;
+    width: 30%;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
     border-radius: 20px;
     padding: 5px;
     background-color: white;
     margin: 10px 10px 10px 10px;
+    
 }
 .cartes-hebergement:hover {
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.2));
@@ -449,7 +456,7 @@ footer a:hover {
         margin: 10px 0 5px 0;
     }
     .bouton-filtres {
-        padding: 8px;
+        padding: 10px;
         margin-left: 0;
     }
     .column-filtres {
@@ -576,7 +583,7 @@ footer a:hover {
         padding: 10px;
     }
     nav {
-        margin: 10px;
+        margin: 10px 10px 0 10px;
         display: flex;
     }
     nav a {
@@ -593,6 +600,9 @@ footer a:hover {
 
     .presentation-recherche {
         margin: 20px;
+    }
+    .headline {
+        padding-top: 0;
     }
     .headline h2 {
         margin-top: 0;
@@ -709,7 +719,24 @@ footer a:hover {
     .cartes-hebergement img {
         height: 120px;
     }
-
+    .cartes-hebergement:nth-child(1) {
+        order: 1;
+    }
+    .cartes-hebergement:nth-child(2) {
+        order: 6;
+    }
+    .cartes-hebergement:nth-child(3) {
+        order: 3;
+    }
+    .cartes-hebergement:nth-child(4) {
+        order: 4;
+    }
+    .cartes-hebergement:nth-child(5) {
+        order: 2;
+    }
+    .cartes-hebergement:nth-child(6) {
+        order: 5;
+    }
 
     /* Activité */
 
